Updated deployment to use the new deploy_helpers from gccommon.
This means that the templates are taken for all remote files. Configuration
is simplified and concise.

Updated the gems for running unicorn and corrected a typo in the .rvmrc.

Removed starting the delayed job daemon via crontab.

On branch: master

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,15 @@
 .bundle
 log/*.log
+tmp/*
 tmp/**/*
-
 .DS_Store
 *.swp
 *.swo
-
 test/fixtures
 test/functional
 test/performance
-capybara*.html
-config/deploy.rb
-
-config/*.yml
-
-db/*.sqlite
-
-builds/*
 test/files/*
+capybara*.html
+config/database.yml
+db/*.sqlite
+builds/*
